# rtmp-switcher

./: Cargo.toml
src/: http.rs  input.rs  lib.rs  mixer.rs  output.rs
src/input/: fake.rs  test.rs  uri.rs
src/output/: auto.rs  file.rs  rtmp.rs
