[package]
name = "switcher"
version = "0.1.0"
authors = ["Erik St. Martin <alakriti@gmail.com>"]
edition = "2018"

[dependencies]
gstreamer = { version = "0.23.3", features = ["v1_18"]}
gstreamer-video = "0.23.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3.7"
eyre = "0.6.0"
clap = "4.5.20"
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2"
